--- a/lib/example.html
+++ b/lib/example.html
@@ -91,7 +91,8 @@
 
 		<script src="./over.min.js"></script>
 		<script>
-			// init of over.js
+			// example usage
+			var example = document.querySelector('.content').overjs();
 		</script>
 	</body>
 </html>
