--- a/lib/example.html
+++ b/lib/example.html
@@ -118,7 +118,12 @@
 		<script>
 			// example usage
 			var example = document.querySelector('.content').over({
-				ignore: [document.querySelector('.ignore-me'), document.querySelector('.also-me-please')]
+				onEnter: function(self, e) {
+					console.log('in');
+				},
+				onOut: function(self, e) {
+					console.log('out');
+				}
 			});
 		</script>
 	</body>
