--- a/lib/example.html
+++ b/lib/example.html
@@ -6,6 +6,7 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
 		<style>
+			/* styles for this example */
 			* {
 				padding: 0;
 				margin: 0;
@@ -90,21 +91,9 @@
 				font-size: 15px;
 				letter-spacing: 5px;
 			}
-
-			/* default styles */
-			.overjs__cursor {
-					width: 14px; /* 10px width + (2 * 2px radius) */
-					height: 14px; /* same as width */
-			}
-
-			.circle-cursor {
-				width: 10px;
-				height: 10px;
-
-				border: 2px solid #fff;
-				border-radius: 10px;
-			}
 		</style>
+
+		<link rel="stylesheet" href="overjs.min.css">
 	</head>
 
 	<body>
