--- a/lib/example.html
+++ b/lib/example.html
@@ -100,7 +100,7 @@
 		<div class="content">
 			<img src="https://source.unsplash.com/collection/190727/600x400" alt="unsplash image" />
 			<h1 class="ignore-me">LOREM IPSUM</h1>
-			<p class="also-me-please">LOREM IPSUM DOLOR SIT AMET</p>
+			<p>LOREM IPSUM DOLOR SIT AMET</p>
 		</div>
 
 		<script src="./over.min.js"></script>
@@ -112,7 +112,11 @@
 				},
 				onOut: function(self, e) {
 					console.log('out');
-				}
+				},
+				onIgnored: function(self, target, e) {
+					console.log('ignored');
+				},
+				ignore: [document.querySelector('.ignore-me')]
 			});
 		</script>
 	</body>
