added onClick,onMouseDown,onMouseUp,onRightClickDown,onRightClickUp events

--- a/lib/example.html
+++ b/lib/example.html
@@ -103,10 +103,28 @@
 			<p>LOREM IPSUM DOLOR SIT AMET</p>
 		</div>
 
-		<script src="./over.min.js"></script>
+		<script src="./over.js"></script>
 		<script>
 			// example usage
-			var example = document.querySelector('.content').over();
+			var example = document.querySelector('.content').over({
+				onMouseDown: function() {
+					console.log("Left Down");
+				},
+				onMouseUp: function() {
+					console.log("Left Up");
+				},
+				onClick: function() {
+					console.log("Left Click");
+				},
+
+				contextMenuPreventDefault: true,
+				onRightClickDown: function() {
+					console.log("Right Down");
+				},
+				onRightClickUp: function() {
+					console.log("Right Up");
+				}
+			});
 		</script>
 	</body>
 </html>
